@@ -1,6 +1,10 @@
 CHANGELOG blackberry ant tools
 ------------------------------
 
+2008/03/31 (josh)
+- Applied patch contributed by badgrs to rename the description property
+  in JdpType from 'desc' to 'description'.
+
 2008/01/17 (josh)
 - Quick update to RapcTask to automatically add the JDE\bin directory to
   the PATH environment variable since people are consistently finding that
